# broadlink-remote

./: .gitignore
api/: .env.example  Dockerfile  README.md  api.py  app_factory.py  bl_client.py  broadlink.xml  main.py  models.py  openapi_spec.py  xml_loader.py
api/commands/: BEDROOM.device
api/commands/AMPLI/: AMPLI.apd  AMPLI.direct  AMPLI.network.down  AMPLI.network.enter  AMPLI.network.left  AMPLI.network.next  AMPLI.network.power  AMPLI.network.previous  AMPLI.network.return  AMPLI.network.right  AMPLI.network.stop  AMPLI.sacd.continue  AMPLI.sacd.next  AMPLI.sacd.pause  AMPLI.sacd.power  AMPLI.sacd.stop  AMPLI.source.balanced  AMPLI.source.line_1  AMPLI.source.line_2  AMPLI.source.phono  AMPLI.source.power_amp_direct  AMPLI.source.usb  AMPLI.volume.down  AMPLI.volume.loudness  AMPLI.volume.up
api/commands/BRASSEUR_AIR/: BRASSEUR_AIR.fan.high  BRASSEUR_AIR.fan.low  BRASSEUR_AIR.fan.medium
api/commands/LECTEUR_RESEAU/: LECTEUR_RESEAU.down  LECTEUR_RESEAU.mode  LECTEUR_RESEAU.mute  LECTEUR_RESEAU.next  LECTEUR_RESEAU.pause  LECTEUR_RESEAU.previous  (+2 more)
api/scripts/: pos_picker.html  tui.py
api/src/: api.py  app_factory.py  bl_client.py  models.py  openapi_spec.py  xml_loader.py
api/static/: README.md  index.html
api/tools/: README.md  setup.py  tui.py
service/: .gitignore
service/Linux/: Cargo.toml  Makefile  README.md  broadlink-remote.service
service/Linux/src/: config.rs  main.rs
service/Linux/src/api_client/: mod.rs
service/Linux/src/mpris/: mod.rs
service/Linux/src/state/: mod.rs
service/Linux/src/tray/: mod.rs
web/: index.html
(+38 files in other folders)
