[package]
name = "broadlink-remote-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
zbus = "4"
mpris-server = "0.8"
ksni = "0.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
url = "2.5"
async-trait = "0.1"
